<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txtUserName"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtUserNameHint"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txtPassword"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/edtPassword"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:inputType="textPassword"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtVerifyPassword"
            android:hint="@string/edtVerifyPassword"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:inputType="textPassword"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSubmit"
            android:id="@+id/btnSubmit"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrationProgressBar"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtShowInfo"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13" />
    </LinearLayout>
</RelativeLayout>
